77: vie scolaire (absences, retards, sanctions, periodes)
